--- a/client/src/css/navigation.module.css
+++ b/client/src/css/navigation.module.css
@@ -93,6 +93,17 @@
     padding-top: 0.2rem;
 }
 
+.usernameAndSilhouette {
+    display: flex;
+    align-items: center;
+    gap: 0rem 1rem;
+}
+
+.usernameAndSilhouette>div:first-of-type {
+    color: white;
+    font-size: 1.25rem;
+}
+
 .profileIcon {
     margin-right: 1vw;
     margin-top: 0.5vh;
@@ -100,6 +111,10 @@
     background-color: white;
     padding: 0.5rem 0.6rem;
     border-radius: 50%;
+}
+
+.profileIcon:hover {
+    background-color: lightgray;
 }
 
 .hiddenProfileBox {
@@ -114,7 +129,6 @@
     border: 1px solid black;
     background-color: white;
     padding: 1rem;
-    margin-top: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem 0rem;
