--- a/client/src/css/trivia.module.css
+++ b/client/src/css/trivia.module.css
@@ -114,7 +114,7 @@
     margin-top: 0.5rem;
 }
 
-button {
+.button {
     align-self: flex-end;
     border: 1px solid #a52a2a;
     border-radius: 10px;
@@ -125,11 +125,11 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.button:hover {
     background-color: rgb(141, 36, 36);
 }
 
-button:disabled {
+.button:disabled {
     background-color: rgba(165, 42, 42, 0.7);
     border: 1px solid rgba(165, 42, 42, 0.1);
     cursor: default;
