completed playlists, working on reset password

--- a/client/src/css/playlists.module.css
+++ b/client/src/css/playlists.module.css
@@ -105,7 +105,7 @@
 
 .playlistActionsParent {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
     gap: 0rem 0.75rem;
     cursor: pointer;
 }
