--- a/client/src/css/musicPlayerDocked.module.css
+++ b/client/src/css/musicPlayerDocked.module.css
@@ -11,15 +11,16 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 0rem 1rem;
 }
 
 .songMetaData {
     display: flex;
     align-items: center;
-    width: 30%;
+    width: 35%;
     justify-content: flex-start;
-    gap: 1rem;
+    gap: 0.6rem;
     padding-top: 0.2rem;
 }
 
@@ -67,7 +68,6 @@
 .by {
     font-size: 0.8rem;
     text-align: center;
-    /* padding-top: 0.1rem; */
 }
 
 .timeAndBar {
@@ -92,7 +92,6 @@
 .controls {
     display: flex;
     align-items: center;
-    /* gap: 1.75rem; */
     padding-right: 1rem;
 }
 
@@ -114,7 +113,7 @@
     z-index: 0;
 }
 
-.hoverArea {
+.volumeHoverArea {
     position: absolute;
     min-width: 4rem;
     min-height: 12rem;
@@ -164,7 +163,7 @@
     position: absolute;
     width: 32.5rem;
     height: 20rem;
-    transform: translate(-18%, -97%);
+    transform: translate(-27%, -97%);
     padding-top: 1rem;
     z-index: 1;
 }
