--- a/client/src/css/signIn.module.css
+++ b/client/src/css/signIn.module.css
@@ -99,6 +99,11 @@
     background-color: rgb(141, 36, 36);
 }
 
+.signInButton:disabled {
+    cursor: not-allowed;
+    background-color: rgba(165, 42, 42, 0.7)
+}
+
 .peekPassword {
     position: absolute;
     right: 0.5rem;
@@ -177,4 +182,11 @@
     display: flex;
     align-items: center;
     gap: 0.3rem;
+}
+
+/* Password reset */
+.afterSubmit {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem
 }
