--- a/client/src/css/homepage.module.css
+++ b/client/src/css/homepage.module.css
@@ -6,6 +6,7 @@
     width: 100%;
     height: 94.5vh;
     overflow-y: scroll;
+    justify-content: space-between;
 }
 
 .firstRow {
@@ -13,39 +14,50 @@
     flex-direction: column;
     align-items: center;
     padding-top: 5rem;
+    width: 100%;
+    padding-left: 12rem;
 }
 
 .title {
     font-size: 2rem;
-    text-align: center;
 }
+
 
 .websiteDesc {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 1rem 0rem;
     font-size: 1.4rem;
-    text-align: center;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     line-height: 1.75rem;
+    max-width: 85%;
+    padding-left: 0.25rem;
+}
+
+.featureHighlightTitle {
+    color: brown;
+    font-weight: bold;
 }
 
 .featureHighlight {
     color: brown;
     font-weight: bold;
+    cursor: pointer;
+}
+
+.featureHighlight:hover {
+    text-decoration: underline;
 }
 
 .secondRow {
     display: flex;
     justify-content: space-evenly;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
-    height: 100%;
+    height: 55%;
     background-color: whitesmoke;
-    padding-top: 3rem;
-    padding-bottom: 5rem;
-    opacity: 0;
+    padding-bottom: 4rem;
+    opacity: 1;
 }
 
 .birthdayCarouselParent {
