--- a/client/src/css/playlists.module.css
+++ b/client/src/css/playlists.module.css
@@ -22,8 +22,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 85vw;
-    height: 94vh;
+    width: 80vw;
+    height: 94.5vh;
 }
 
 .title {
@@ -71,17 +71,13 @@
 .playlists {
     display: flex;
     flex-direction: column;
-    margin-top: 1rem;
+    margin-top: 2rem;
     width: 100%;
-    max-height: 94vh;
+    max-height: 94.5vh;
     /* padding-left: 15rem; */
     /* padding-right: 15rem; */
     overflow-y: auto;
-}
-
-.playlistItem {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    gap: 1.75rem 0rem;
 }
 
 .playlistTitleParent {
@@ -89,6 +85,10 @@
     justify-content: space-between;
     align-items: flex-end;
     margin-bottom: 1rem;
+}
+
+.playlistTitle {
+    font-size: 1.45rem;
 }
 
 .playlistTitleAndArrow {
@@ -127,12 +127,12 @@
 /* New Playlist */
 .newPlaylistParent {
     display: flex;
-    height: 94vh;
+    height: 94.5vh;
     justify-content: center;
 }
 
 .newPlaylistBody {
-    max-height: 94vh;
+    max-height: 94.5vh;
     width: 100%;
     padding-left: 8rem;
     padding-right: 8rem;
@@ -213,6 +213,8 @@
 }
 
 .cancelButton:hover {
+    background-color: rgb(141, 36, 36);
+    border-color: rgb(141, 36, 36);
     color: white;
 }
 
@@ -220,6 +222,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    gap: 0.5rem 0rem;
 }
 
 .searchForWorkParent>label {
@@ -309,4 +312,14 @@
     margin-top: 0.5rem;
     margin-bottom: 0.75rem;
     font-size: 1.3rem;
+}
+
+@media (max-width: 1280px) {
+    .playlistBody {
+        max-height: 94.5vh;
+    }
+
+    .newPlaylistBody {
+        max-height: 94.5vh;
+    }
 }
