--- a/client/src/css/profile.module.css
+++ b/client/src/css/profile.module.css
@@ -2,27 +2,21 @@
     display: flex;
     justify-content: center;
     height: 94.5vh;
-}
-
-.headerStyle {
-    position: absolute;
-    top: -4rem;
-    margin-left: 1rem;
+    border: 1px solid black;
 }
 
 .contentParent {
-    margin-top: 7rem;
+    margin-top: 4rem;
     display: flex;
     flex-direction: column;
-    /* border: 1px solid red; */
     width: 60%;
-    height: 70%;
+    height: 75%;
 }
 
 .content {
     display: flex;
     height: 100%;
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 .sidebar {
@@ -80,4 +74,19 @@
     justify-content: center;
     margin-top: 0.25rem;
     gap: 0rem 0.5rem;
+}
+
+@media (max-width: 1280px) {
+
+    .sidebar {
+        width: 25%;
+    }
+
+    .contentParent {
+        margin-top: 3rem;
+    }
+
+    .contentItem {
+        min-width: 75%;
+    }
 }
