--- a/client/src/css/viewComposer.module.css
+++ b/client/src/css/viewComposer.module.css
@@ -22,7 +22,7 @@
   opacity: 0;
   padding-left: 4rem;
   overflow-y: scroll;
-  max-height: 94vh;
+  max-height: 94.5vh;
 }
 
 .left {
@@ -224,6 +224,11 @@
 }
 
 @media (max-width: 1280px) {
+
+  .viewComposerMainBody {
+    max-height: 94.5vh;
+  }
+
   .left {
     padding-left: 3rem;
     gap: 0.5rem 0rem;
@@ -231,7 +236,7 @@
 
   .viewComposerMainBody {
     padding-top: 2rem;
-    gap: 0rem 3rem;
+    gap: 0rem 4rem;
   }
 
   .composerImage {
@@ -246,7 +251,7 @@
   .exploreGenres {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 1rem 2rem;
+    gap: 1rem 1rem;
     margin: 1rem 0rem 1rem 0rem;
     overflow: hidden;
   }
