--- a/client/src/css/viewWorks.module.css
+++ b/client/src/css/viewWorks.module.css
@@ -25,7 +25,7 @@
   margin-left: auto;
   margin-right: auto;
   opacity: 0;
-  padding: 4rem 30rem 2rem 30rem;
+  padding: 4rem 30rem 4rem 30rem;
 }
 
 .workTitle {
@@ -90,8 +90,15 @@
 }
 
 @media (max-width: 1280px) {
+
+  .worksMainBody {
+    max-height: 94.5vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
   .worksBody {
     min-width: 72%;
-    padding: 4rem 10rem 2rem 10rem;
+    padding: 4rem 10rem 4rem 10rem;
   }
 }
