--- a/client/src/css/navigation.module.css
+++ b/client/src/css/navigation.module.css
@@ -79,6 +79,7 @@
     padding: 0.3rem 0rem 0.25rem 0.25rem;
     font-size: 0.5rem;
     white-space: nowrap;
+    margin-bottom: 0.5rem;
 }
 
 .placeDarkmodeBottom {
