--- a/client/src/css/viewWorks.module.css
+++ b/client/src/css/viewWorks.module.css
@@ -89,10 +89,14 @@
   cursor: pointer;
 }
 
+.playButtonIcon {
+  font-size: 2rem;
+}
+
 @media (max-width: 1280px) {
 
   .worksMainBody {
-    max-height: 94.5vh;
+    max-height: 92vh;
     overflow-y: scroll;
     overflow-x: hidden;
   }
@@ -100,5 +104,18 @@
   .worksBody {
     min-width: 72%;
     padding: 4rem 10rem 4rem 10rem;
+  }
+}
+
+
+@media (max-width:1000px) {
+  .playButtonIcon {
+    font-size: 1.9rem;
+  }
+}
+
+@media (max-width: 760px) {
+  .playButtonIcon {
+    font-size: 1.75rem;
   }
 }
