--- a/client/src/css/allWorks.module.css
+++ b/client/src/css/allWorks.module.css
@@ -17,7 +17,7 @@
     justify-content: center;
     max-height: 94.5vh;
     overflow-y: auto;
-    padding-left: 1rem;
+    padding-left: 3rem;
 }
 
 .allWorksParent {
@@ -78,6 +78,7 @@
 .workCard {
     display: grid;
     grid-template-columns: 3fr 2fr 0fr;
+    column-gap: 5rem;
     max-width: 85vw;
     min-width: 85vw;
     align-items: center;
@@ -95,5 +96,17 @@
 @media (max-width: 1280px) {
     .allWorksMainBody {
         max-height: 92vh;
+    }
+}
+
+@media (max-width: 1000px) {
+    .searchResult {
+        gap: 1rem 0rem;
+    }
+
+    .workCard {
+        grid-template-columns: 4fr 2fr 0fr;
+        font-size: 1.1rem;
+        padding-bottom: 0.5rem;
     }
 }
