--- a/client/src/css/viewWorks.module.css
+++ b/client/src/css/viewWorks.module.css
@@ -16,16 +16,18 @@
   max-height: 94.5vh;
   overflow-y: scroll;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 4rem;
 }
 
 .worksBody {
   display: flex;
   flex-direction: column;
   width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
   opacity: 0;
-  padding: 4rem 30rem 4rem 30rem;
+  padding-bottom: 4rem;
 }
 
 .workTitle {
@@ -101,21 +103,97 @@
     overflow-x: hidden;
   }
 
-  .worksBody {
-    min-width: 72%;
-    padding: 4rem 10rem 4rem 10rem;
-  }
 }
 
 
-@media (max-width:1000px) {
+@media (max-width:1125px) {
+  .worksMainBody {
+    padding-left: 2rem;
+  }
+
   .playButtonIcon {
     font-size: 1.9rem;
   }
+
+  .workHeader {
+    grid-template-columns: 28rem 8rem 7rem 1rem;
+  }
+
+  .workCard {
+    grid-template-columns: 28rem 8rem 7rem 1rem;
+  }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 950px) {
+
+  .workHeader {
+    grid-template-columns: 22rem 7rem 6rem 1rem;
+  }
+
+  .workCard {
+    grid-template-columns: 22rem 7rem 6rem 1rem;
+    font-size: 1.1rem;
+    padding: 0.75rem 1rem 0.75rem 0rem;
+  }
+
+  .filterWorksHeader {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    padding-bottom: 1.5rem;
+    gap: 0.75rem 0rem;
+  }
+}
+
+@media (max-width: 800px) {
   .playButtonIcon {
     font-size: 1.75rem;
+  }
+
+  .workHeader {
+    font-size: 1.3rem;
+    grid-template-columns: 15rem 7rem 7rem 0rem;
+  }
+
+  .workCard {
+    grid-template-columns: 15rem 7rem 7rem 0rem;
+    font-size: 1rem;
+    padding: 0.75rem 1rem 0.75rem 0rem;
+  }
+
+  .filterWorksHeader {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    padding-bottom: 1.5rem;
+    gap: 0.75rem 0rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .playButtonIcon {
+    font-size: 1.75rem;
+  }
+
+  .worksBody {
+    max-width: 80%;
+  }
+
+  .filterWorksHeader {
+    width: 82.5%;
+  }
+
+  .allGenresParent {
+    flex-wrap: wrap;
+  }
+
+  .workHeader {
+    font-size: 1.2rem;
+    grid-template-columns: 10rem 6rem 6rem 1rem;
+  }
+
+  .workCard {
+    grid-template-columns: 10rem 6rem 6rem 1rem;
+    font-size: 1rem;
   }
 }
