--- a/client/src/css/loading.module.css
+++ b/client/src/css/loading.module.css
@@ -43,7 +43,7 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem 0rem;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .loadingTitle {
